--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -22,18 +22,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxN-h1-lJK">
-                                <rect key="frame" x="108" y="310" width="159" height="47"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Log In with Twitter"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxN-h1-lJK">
+                                <rect key="frame" x="82.5" y="303.5" width="210" height="60"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="210" id="251-lr-cNu"/>
+                                    <constraint firstAttribute="height" constant="60" id="TZg-W1-lhe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <state key="normal" title="Log In with Twitter">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jAZ-WG-tub"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jxN-h1-lJK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kcZ-jG-ytR"/>
+                            <constraint firstItem="jxN-h1-lJK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wCI-xX-C6f"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="jxN-h1-lJK" id="j2d-ZW-54I"/>
                         <segue destination="ygT-ey-0Vd" kind="presentation" identifier="loginSegure" id="g2X-xC-mY5"/>
                     </connections>
                 </viewController>
