--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HNK-rR-2aM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,127 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Menu View Controller-->
+        <scene sceneID="3j3-dY-h45">
+            <objects>
+                <viewController storyboardIdentifier="MenuViewController" id="7oM-4I-cEK" customClass="MenuViewController" customModule="TwitterDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TO7-Yo-x1s"/>
+                        <viewControllerLayoutGuide type="bottom" id="UOI-LM-iu2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7pZ-sO-EGS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="woM-LU-5ug">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuCell" rowHeight="53" id="o9e-hA-R5m" customClass="MenuCell" customModule="TwitterDemo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="53"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o9e-hA-R5m" id="OLj-XO-bSN">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="MenuItem" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alT-Zw-bvc">
+                                                    <rect key="frame" x="77" y="16" width="285" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vAe-um-t4q">
+                                                    <rect key="frame" x="17" y="4" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="XxK-9O-OtT"/>
+                                                        <constraint firstAttribute="width" constant="45" id="pNw-n2-ViG"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="centerY" secondItem="vAe-um-t4q" secondAttribute="centerY" id="LIM-K3-cjT"/>
+                                                <constraint firstItem="vAe-um-t4q" firstAttribute="centerY" secondItem="OLj-XO-bSN" secondAttribute="centerY" id="QCc-7s-8Xo"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="alT-Zw-bvc" secondAttribute="trailing" constant="5" id="Tgn-2K-zed"/>
+                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="leading" secondItem="vAe-um-t4q" secondAttribute="trailing" constant="15" id="Xq6-wH-cAL"/>
+                                                <constraint firstItem="vAe-um-t4q" firstAttribute="leading" secondItem="OLj-XO-bSN" secondAttribute="leading" constant="17" id="rpJ-8s-nDy"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="menuIcon" destination="vAe-um-t4q" id="MuL-9W-aEo"/>
+                                            <outlet property="menuLabel" destination="alT-Zw-bvc" id="vBA-tZ-s1i"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UOI-LM-iu2" firstAttribute="top" secondItem="woM-LU-5ug" secondAttribute="bottom" id="Hgk-47-Xbg"/>
+                            <constraint firstItem="woM-LU-5ug" firstAttribute="top" secondItem="7pZ-sO-EGS" secondAttribute="top" id="KO2-Th-CDY"/>
+                            <constraint firstAttribute="trailing" secondItem="woM-LU-5ug" secondAttribute="trailing" id="LA3-Tg-q7V"/>
+                            <constraint firstItem="woM-LU-5ug" firstAttribute="leading" secondItem="7pZ-sO-EGS" secondAttribute="leading" id="fMy-zO-Wr9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="woM-LU-5ug" id="MMZ-0b-4RG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6aL-2o-0jF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-134" y="-1388"/>
+        </scene>
+        <!--Hambuger View Controller-->
+        <scene sceneID="AiM-pv-suf">
+            <objects>
+                <viewController id="HNK-rR-2aM" customClass="HambugerViewController" customModule="TwitterDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="P8Z-Ue-e7J"/>
+                        <viewControllerLayoutGuide type="bottom" id="dGn-Aw-raN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="k5S-5s-GU2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wAW-CH-Pwe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NXz-Vd-ZVM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Pqz-as-qho" appends="YES" id="dTN-Ye-Cg0"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NXz-Vd-ZVM" firstAttribute="leading" secondItem="k5S-5s-GU2" secondAttribute="leading" id="3zV-2x-adg"/>
+                            <constraint firstItem="NXz-Vd-ZVM" firstAttribute="top" secondItem="k5S-5s-GU2" secondAttribute="top" id="9ew-bz-LUG"/>
+                            <constraint firstItem="wAW-CH-Pwe" firstAttribute="leading" secondItem="k5S-5s-GU2" secondAttribute="leading" id="GJF-EE-Z26"/>
+                            <constraint firstItem="wAW-CH-Pwe" firstAttribute="top" secondItem="k5S-5s-GU2" secondAttribute="top" id="PTM-3t-qXP"/>
+                            <constraint firstItem="dGn-Aw-raN" firstAttribute="top" secondItem="wAW-CH-Pwe" secondAttribute="bottom" id="Wkm-jL-cO0"/>
+                            <constraint firstAttribute="trailing" secondItem="wAW-CH-Pwe" secondAttribute="trailing" id="egM-cG-ra5"/>
+                            <constraint firstItem="NXz-Vd-ZVM" firstAttribute="width" secondItem="k5S-5s-GU2" secondAttribute="width" id="iOx-6F-a2L"/>
+                            <constraint firstItem="dGn-Aw-raN" firstAttribute="top" secondItem="NXz-Vd-ZVM" secondAttribute="bottom" id="xYJ-Ad-Qh4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="contentView" destination="NXz-Vd-ZVM" id="DeI-SH-XeO"/>
+                        <outlet property="contentViewLeadingConstrain" destination="3zV-2x-adg" id="gWA-9C-uV0"/>
+                        <outlet property="menuView" destination="wAW-CH-Pwe" id="Hqy-fa-KBc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="11v-Uf-rnr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="Pqz-as-qho">
+                    <connections>
+                        <action selector="onPanContentView:" destination="HNK-rR-2aM" id="gob-YQ-quC"/>
+                    </connections>
+                </panGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="-135" y="-714"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -56,7 +177,7 @@
         <!--Tweets View Controller-->
         <scene sceneID="Ip0-rq-ghC">
             <objects>
-                <viewController id="B9s-FO-D1N" customClass="TweetsViewController" customModule="TwitterDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="B9s-FO-D1N" customClass="TweetsViewController" customModule="TwitterDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qES-PE-lVl"/>
                         <viewControllerLayoutGuide type="bottom" id="bZf-Qr-k8J"/>
@@ -65,12 +186,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CF2-t6-h4o">
-                                <rect key="frame" x="0.0" y="20" width="375" height="667"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="CF2-t6-h4o">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TweetCell" rowHeight="106" id="Pzh-Cg-Uja" userLabel="TweetCell" customClass="TweetCell" customModule="TwitterDemo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="106"/>
+                                        <rect key="frame" x="0.0" y="1" width="375" height="106"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pzh-Cg-Uja" id="xEU-EX-PTZ">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
@@ -193,10 +314,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CF2-t6-h4o" firstAttribute="top" secondItem="v8C-zt-w6m" secondAttribute="top" constant="20" id="6Fn-MW-mNT"/>
+                            <constraint firstItem="CF2-t6-h4o" firstAttribute="top" secondItem="qES-PE-lVl" secondAttribute="bottom" id="9uS-5B-0bd"/>
                             <constraint firstAttribute="trailing" secondItem="CF2-t6-h4o" secondAttribute="trailing" id="FMh-LL-WRP"/>
                             <constraint firstItem="CF2-t6-h4o" firstAttribute="leading" secondItem="v8C-zt-w6m" secondAttribute="leading" id="Nja-Ei-xay"/>
-                            <constraint firstItem="bZf-Qr-k8J" firstAttribute="top" secondItem="CF2-t6-h4o" secondAttribute="bottom" constant="-20" id="TEp-F7-HOa"/>
+                            <constraint firstItem="bZf-Qr-k8J" firstAttribute="top" secondItem="CF2-t6-h4o" secondAttribute="bottom" id="vKm-OC-foU"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Rrb-bc-kDN">
