--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -34,29 +34,20 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="MenuItem" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alT-Zw-bvc">
-                                                    <rect key="frame" x="77" y="16" width="285" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <rect key="frame" x="25" y="16" width="337" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vAe-um-t4q">
-                                                    <rect key="frame" x="17" y="4" width="45" height="45"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="45" id="XxK-9O-OtT"/>
-                                                        <constraint firstAttribute="width" constant="45" id="pNw-n2-ViG"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="centerY" secondItem="vAe-um-t4q" secondAttribute="centerY" id="LIM-K3-cjT"/>
-                                                <constraint firstItem="vAe-um-t4q" firstAttribute="centerY" secondItem="OLj-XO-bSN" secondAttribute="centerY" id="QCc-7s-8Xo"/>
+                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="leading" secondItem="OLj-XO-bSN" secondAttribute="leadingMargin" constant="17" id="E0B-BK-NYo"/>
+                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="centerY" secondItem="OLj-XO-bSN" secondAttribute="centerY" id="Rju-3p-EPE"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="alT-Zw-bvc" secondAttribute="trailing" constant="5" id="Tgn-2K-zed"/>
-                                                <constraint firstItem="alT-Zw-bvc" firstAttribute="leading" secondItem="vAe-um-t4q" secondAttribute="trailing" constant="15" id="Xq6-wH-cAL"/>
-                                                <constraint firstItem="vAe-um-t4q" firstAttribute="leading" secondItem="OLj-XO-bSN" secondAttribute="leading" constant="17" id="rpJ-8s-nDy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="menuIcon" destination="vAe-um-t4q" id="MuL-9W-aEo"/>
                                             <outlet property="menuLabel" destination="alT-Zw-bvc" id="vBA-tZ-s1i"/>
                                         </connections>
                                     </tableViewCell>
@@ -77,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6aL-2o-0jF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-134" y="-1388"/>
+            <point key="canvasLocation" x="-345" y="-1379"/>
         </scene>
         <!--Hambuger View Controller-->
         <scene sceneID="AiM-pv-suf">
